sumo/tests/traci/StopNode/InvalidNode/net_state.traci
<?xml version="1.0"?>

<!-- generated on 05/13/08 20:08:29 by SUMO sumo Version dev-SVN-r5510
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <traffic_control_interface_(traci)_server>
      <remote-port>8824</remote-port>
      <penetration>1</penetration>
   </traffic_control_interface_(traci)_server>

</configuration>
-->

<sumo-netstate>
   <timestep time="1">
      <edge id="e_m4">
         <lane id="e_m4_0">
            <vehicle id="veh0" pos="0.00" speed="0.00"/>
         </lane>
         <lane id="e_m4_1"/>
         <lane id="e_m4_2"/>
      </edge>
   </timestep>
</sumo-netstate>
